feat: Implement multi-user support with JWT authentication
Backend Changes:
- Added Spring Security and JWT dependencies
- Created User entity and established relationships with Category and Session
- Implemented JWT authentication (JwtUtil, JwtAuthenticationFilter, SecurityConfig)
- Added AuthController for login and registration endpoints
- Updated CategoryController and SessionController to enforce user data isolation
- Implemented statistics calculation in SessionService and added /statistics endpoint
- Updated DataSeeder to create a default admin user
- Configured CORS to allow frontend requests
- Added @JsonIgnore to User entity to prevent circular references and password exposure